--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "open": "^8.0.4"
   },
   "devDependencies": {
+    "cookie-parser": "^1.4.5",
     "copy-webpack-plugin": "^8.1.0",
+    "express-handlebars": "^5.3.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
