--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/app.js"
+    "start": "node server/app.js",
+    "lint": "eslint src"
   },
   "keywords": [],
   "author": "",
