Disable "no-console" eslint warning

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "parser": "babel-eslint",
   "extends": ["airbnb"],
   "rules": {
-    "indent": ["error", 4]
+    "indent": ["error", 4],
+    "no-console": "off"
   }
 }
