--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/app.js",
     "lint": "eslint src",
+    "lint server": "eslint server",
     "build": "webpack build"
   },
   "keywords": [],
